--- a/number-book/src/components/Form/form.css
+++ b/number-book/src/components/Form/form.css
@@ -7,6 +7,10 @@
     border-radius: 30px;
     border: 4px solid rgb(0, 0, 0);
 }
+.container__form h1{
+    color: wheat;
+    text-align: center;
+}
 .container__input{
     width: 400px;
     padding: 5px;
