--- a/number-book/src/components/Form/form.css
+++ b/number-book/src/components/Form/form.css
@@ -7,6 +7,16 @@
     border-radius: 30px;
     border: 4px solid rgb(0, 0, 0);
 }
+.container__form select{
+    background-image: linear-gradient(to bottom right, red, rgb(79, 185, 9));
+}
+.container__add{
+    background-color: blueviolet;
+    cursor: pointer;
+    color: wheat;
+    font-weight: bolder;
+    font-family: sans-serif;
+}
 .container__form h1{
     color: wheat;
     text-align: center;
@@ -14,6 +24,11 @@
 .container__input{
     width: 400px;
     padding: 5px;
+    color: rgb(19, 19, 19);
+    font-weight: bolder;
+    background-color: blue;
+    border: none;
+    
     border: 3px solid rgb(34, 20, 20);
     /* border-radius: 20px; */
 }
