--- a/number-book/src/App.css
+++ b/number-book/src/App.css
@@ -1,10 +1,31 @@
-*{
+* {
   margin: 0;
   padding: 0;
+
 }
-.container{
+
+body {
+  background-color: brown;
+}
+
+.container {
+  max-width: 1140px;
   margin: 0 auto;
+  /* border: 1px solid black; */
+}
+
+.container__header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.container__header button {
+  cursor: pointer;
+  border: none;
+  width: 200px;
+  background-color: black;
+  color: wheat;
+  font-family: sans-serif;
+  border-radius: 10px;
 }
