--- a/number-book/src/components/Form/form.css
+++ b/number-book/src/components/Form/form.css
@@ -1,4 +1,6 @@
-.container__form{
+.container__form {
+    max-width: 400px;
+    align-items: center;
     display: flex;
     flex-direction: column;
     gap: 3px;
@@ -7,31 +9,37 @@
     border-radius: 30px;
     border: 4px solid rgb(0, 0, 0);
 }
-.container__form select{
+
+
+.container__form select {
     background-image: linear-gradient(to bottom right, red, rgb(79, 185, 9));
 }
-.container__add{
+
+.container__add {
     background-color: blueviolet;
     cursor: pointer;
     color: wheat;
     font-weight: bolder;
     font-family: sans-serif;
 }
-.container__form h1{
+
+.container__form h1 {
     color: wheat;
     text-align: center;
 }
-.container__input{
+
+.container__input {
     width: 400px;
     padding: 5px;
     color: rgb(19, 19, 19);
     font-weight: bolder;
     background-color: blue;
     border: none;
-    
+
     border: 3px solid rgb(34, 20, 20);
     /* border-radius: 20px; */
 }
-.container__form button{
+
+.container__form button {
     padding: 5px;
 }
