--- a/number-book/src/components/List/list.css
+++ b/number-book/src/components/List/list.css
@@ -85,6 +85,8 @@
     border: none;
 }
 
+/* //////////////////////////////////////// */
+
 .container__color {
     color: black;
     font-weight: bolder;
