--- a/number-book/src/App.css
+++ b/number-book/src/App.css
@@ -14,15 +14,31 @@
 .container__header {
   display: flex;
   width: 100%;
+  height: 50px;
+  background-color: aquamarine
+  ;
+  display: flex;
+  align-items: center;
   justify-content: space-evenly;
 }
 
-.container__header button {
+.container__contacts {
   cursor: pointer;
   border: none;
-  width: 200px;
+  width: 180px;
   background-color: black;
   color: wheat;
+  height: 30px;
+  font-family: sans-serif;
+  border-radius: 10px;
+}
+.container__favorites {
+  cursor: pointer;
+  border: none;
+  width: 180px;
+  background-color: black;
+  color: wheat;
+  height: 30px;
   font-family: sans-serif;
   border-radius: 10px;
 }
