--- a/number-book/src/App.css
+++ b/number-book/src/App.css
@@ -13,10 +13,9 @@
 
 .container__header {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   height: 50px;
-  background-color: aquamarine
-  ;
+  background-color: aquamarine;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -32,6 +31,7 @@
   font-family: sans-serif;
   border-radius: 10px;
 }
+
 .container__favorites {
   cursor: pointer;
   border: none;
