--- a/number-book/src/App.css
+++ b/number-book/src/App.css
@@ -4,6 +4,14 @@
 
 }
 
+body {
+  background-color: #D9AFD9;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+
+}
+
 
 
 .container {
@@ -15,7 +23,7 @@
   display: flex;
   /* width: 100%; */
   height: 50px;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
