--- a/number-book/src/components/List/list.css
+++ b/number-book/src/components/List/list.css
@@ -1,10 +1,12 @@
 .container__cart {
     display: flex;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    box-shadow: 1px 1px 4px black;
     align-items: center;
     padding: 10px;
     gap: 20px;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
+    /* font-family: sans-serif; */
     /* z-index: -1000; */
     border-radius: 10px;
 
@@ -93,7 +95,8 @@
     font-size: 13px;
     font-family: sans-serif;
 }
-.container__favorite{
+
+.container__favorite {
     font-size: 30px;
     cursor: pointer;
 }
