--- a/number-book/src/components/LoginPage/LoginPage.css
+++ b/number-book/src/components/LoginPage/LoginPage.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-body {
-    background: #f6f5f7;
+.container__login {
+    /* background: #f6f5f7; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,16 +15,27 @@ body {
     margin: -20px 0 50px;
 }
 
-h1 {
+/* body {
+    background: #f6f5f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    margin: -20px 0 50px;
+} */
+
+.container__login h1 {
     font-weight: bold;
     margin: 0;
 }
 
-h2 {
+.container__login h2 {
     text-align: center;
 }
 
-p {
+.container__login p {
     font-size: 14px;
     font-weight: 100;
     line-height: 20px;
@@ -32,18 +43,18 @@ p {
     margin: 20px 0 30px;
 }
 
-span {
+.container__login span {
     font-size: 12px;
 }
 
-a {
+.container__login a {
     color: #333;
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
 }
 
-button {
+.container__login button {
     border-radius: 20px;
     border: 1px solid #FF4B2B;
     background-color: #FF4B2B;
@@ -56,20 +67,20 @@ button {
     transition: transform 80ms ease-in;
 }
 
-button:active {
+.container__login button:active {
     transform: scale(0.95);
 }
 
-button:focus {
+.container__login button:focus {
     outline: none;
 }
 
-button.ghost {
+.container__login button.ghost {
     background-color: transparent;
     border-color: #FFFFFF;
 }
 
-form {
+.container__login form {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -80,10 +91,10 @@ form {
     text-align: center;
 }
 
-input {
+.container__login input {
     background-color: #eee;
     border: none;
-    padding: 12px 15px;
+    padding: 9px 15px;
     margin: 8px 0;
     width: 100%;
 }
@@ -226,29 +237,4 @@ input {
     margin: 0 5px;
     height: 40px;
     width: 40px;
-}
-
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 14px;
-    bottom: 0;
-    position: fixed;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 999;
-}
-
-footer p {
-    margin: 10px 0;
-}
-
-footer i {
-    color: red;
-}
-
-footer a {
-    color: #3c97bf;
-    text-decoration: none;
 }
