--- a/number-book/src/components/Search/Search.css
+++ b/number-book/src/components/Search/Search.css
@@ -20,3 +20,22 @@
     display: flex;
     gap: 14px;
 }
+
+.container__user {
+    background-color: aliceblue;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.container__userName {
+    font-size: 18px;
+    color: rgb(17, 0, 255);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.container__logout {
+    color: black;
+    font-weight: 500;
+    cursor: pointer;
+}
